# citro3d-rs

./: .gitignore
citro2d-sys/: Cargo.toml  build.rs
citro2d/examples/: 2d_shapes.rs  breakout.rs
citro2d/src/: drawable.rs  lib.rs  render.rs  shapes.rs
citro3d/: Cargo.toml
citro3d-macros/: Cargo.toml
citro3d-macros/src/: lib.rs
citro3d-sys/: Cargo.toml
citro3d/examples/: cube.rs  fragment-light.rs  triangle.rs
citro3d/src/: lib.rs  render.rs  texture.rs  uniform.rs
